fix scroll to top z-index

--- a/ChessMeters.Web/ClientApp/src/app/scroll-to-top/scroll-to-top.component.scss
+++ b/ChessMeters.Web/ClientApp/src/app/scroll-to-top/scroll-to-top.component.scss
@@ -12,6 +12,7 @@
   border-radius:100%;
   height:40px;
   width:40px;
+  z-index:2;
 
   &:hover {
     .btn {
